# OneBillionRowChallenge

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  test.py
code/: bit_scan.h  display_mm128.hpp  file_utils.cpp  file_utils.hpp  main.cpp  measure_time.hpp  parse_uint.hpp
java/: CalculateAverage.java  CalculateAverage_baseline.java  CreateMeasurements.java
scripts/: test.py
